# managi-v3

./: .gitignore  .trivyignore  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.trae/documents/: managi-v3-stability-bug-audit.md  v3-minor-version-optimization.md
backend/: .golangci.yml  go.mod  go.sum
backend/cmd/managi/: main.go
backend/cmd/windows-app/: .gitignore  main.go
backend/internal/config/: config.go  config_test.go
backend/internal/handler/: auth.go  auth_test.go  handler.go  handler_test.go  live_session.go  live_session_test.go  sftp.go  sftp_test.go  ssh.go  ssh_test.go  terminal.go  terminal_test.go  wsmsg.go
backend/internal/model/: types.go  types_test.go
backend/internal/sftp/: ops.go  ops_test.go
backend/internal/sshpool/: pool.go  pool_test.go
backend/internal/terminal/: session.go  session_test.go
backend/internal/testutil/: fixtures.go  mockssh.go
deploy/: Dockerfile  docker-compose.yml  install.sh  install_test.sh
desktop/: README.md
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  api.ts  helper.ts  i18n.ts  main.ts
frontend/src/__tests__/: api.test.ts  helper.test.ts  setup.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AddNode.vue  Bg.vue  ButtonWithSpinner.vue  CirclePercent.vue  ConfirmDialog.vue  ContextMenu.vue  Finder.vue  Modal.vue  NodeList.vue  QuickCommandPanel.vue  Spinner.vue  TabBar.vue
(+42 files in other folders)
