[package]
name = "managi-desktop"
version = "3.0.0"
description = "Managi v3 跨平台桌面客户端"
authors = ["Managi"]
edition = "2021"
rust-version = "1.70"

# Tauri 桌面客户端外壳，通过 sidecar 嵌入 Go 后端二进制。
# 设计见 ../../../design-v3.md 第七章。

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-sidecar", "system-tray", "notification"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
